# CoDA-Bench

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASE_v1.0.0.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
assets/: README.md
coda_bench/: README.md  __init__.py  cli.py  evaluation.py  io.py  schema.py
data/: README.md  coda_bench.json  coda_bench_hard.json
docker/: README.md  build_all.sh
docker/openhands/: Dockerfile  entrypoint.sh  network-lock.sh  openhands-sdk.py  run_task.sh
docs/: baseline_agents.md  data_format.md  evaluation_protocol.md  leaderboard_submission.md
examples/: evaluate_predictions.py  load_dataset.py  sample_submission.jsonl
scripts/: extract_archives.py  run_evaluation.py  setup_dataset.py  test_installation.py
tests/: __init__.py  test_evaluation.py  test_io.py
